[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/prince3.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://textures/prince_walk1.png" type="Texture" id=3]
[ext_resource path="res://textures/prince4.png" type="Texture" id=4]
[ext_resource path="res://textures/prince2.png" type="Texture" id=5]
[ext_resource path="res://textures/prince1.png" type="Texture" id=6]
[ext_resource path="res://textures/prince_walk3.png" type="Texture" id=7]
[ext_resource path="res://textures/prince_walk2.png" type="Texture" id=8]
[ext_resource path="res://main_theme.tres" type="Theme" id=9]
[ext_resource path="res://scenes/Dialog.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.3174, 165.946 )

[node name="Player" type="AnimatedSprite"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true
script = ExtResource( 2 )

[node name="area" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area"]
shape = SubResource( 2 )

[node name="label1" type="Label" parent="."]
visible = false
margin_left = -550.0
margin_top = -300.0
margin_right = -306.0
margin_bottom = -284.0
rect_scale = Vector2( 5, 5 )
theme = ExtResource( 9 )
text = "Нажмите У для использования"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" parent="." instance=ExtResource( 10 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1904.0
margin_top = -1134.0
margin_right = -1184.0
margin_bottom = -654.0
rect_scale = Vector2( 5, 5 )

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
